bugfixes due to unit tests
